--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -6,13 +6,27 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Module 2 solution</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <head>
   <h1>Our Menu</h1>
 </head>
 <main>
-  <div class="container"></div>
+  <div class="container">
+      <div class="content-wrapper chicken">
+          <span>Chicken</span>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores aspernatur atque cupiditate eaque ex magni minus nobis, non, obcaecati quia repellat rerum sequi similique temporibus ullam ut veritatis voluptates!</p>
+      </div>
+      <div class="content-wrapper beef">
+          <span>Beef</span>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At delectus expedita neque quis reprehenderit repudiandae? Alias eligendi excepturi expedita ipsam labore maiores similique suscipit tempore voluptatem. Dicta error ex quibusdam?</p>
+      </div>
+      <div class="content-wrapper sushi">
+          <span>Sushi</span>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore id maiores quo sequi similique sint totam. Aspernatur deserunt, earum eligendi hic impedit, labore nobis qui ratione reiciendis sequi temporibus voluptatibus.</p>
+      </div>
+  </div>
 </main>
 </body>
 </html>
